[refact] конфигурация api вынесена в отдельный пакет

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-SECRETKEY='Пример секретного ключа, для использоания на сервере - замените на свой'
+SECRETKEY='Пример секретного ключа, замените на свой'
